<?xml version="1.0"?>
<package format="2">
  <name>ika_decision_making</name>
  <version>0.0.0</version>
  <description>The ika_decision_making package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="moritz.cremer@fka.de">Moritz Cremer</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <depend>std_msgs</depend>
  <depend>definitions</depend>
  <depend>lanelet2_core</depend>
  <depend>lanelet2_io</depend>
  <depend>lanelet2_projection</depend>
  <depend>lanelet2_routing</depend>
  <depend>route_planning</depend>
  <depend>dynamic_boundaries</depend>
  <depend>lanelet2_interface_ros</depend>
  <depend>tf</depend>
  <depend>lanelet2_utils</depend>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- <build_depend>message_generation</build_depend> -->
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
